--- a/config.example.yml
+++ b/config.example.yml
@@ -5,9 +5,11 @@ listen:
   identify: true
 serve:
   dataStorage: ""
+  templateStorage: ""
   domains: []
   rangeSupported: true
   enableGoInfoPage: true
+  ymlDataFallback: false
   cacheSettings:
     enableTemplateCaching: false
     enableTemplateCachePurge: false
@@ -16,3 +18,6 @@ serve:
     maxAge: 3600
     notModifiedUsingLastModified: true
     notModifiedUsingETags: true
+  pageSettings:
+    - pageName: index
+      pagePath: /index.go
